--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </div>
 
 
-            <div class="service-tab row">
+            <div class="service-tab row d-none">
                 <div class="col-md-6 col-sm-6">
                     <img src="images/service/service-2.png" alt="">
                 </div>
@@ -144,7 +144,7 @@
             </div>
 
 
-            <div class="service-tab row">
+            <div class="service-tab row d-none">
                 <div class="service-outer col-md-6 col-sm-6 col-12">
                     <div class="service-inner">
                         <p>Услуга, направленная на разработку дизайна с анимацией, дизайн интерьера и экстерьера</p>
@@ -175,12 +175,6 @@
                 <a href="#" class="portfolio-btn prev" id="arrow-left"></a>
                 <a href="#" class="portfolio-btn next" id="arrow-right"></a>
                 <ul class="portfolio-dots">
-                    <li class="dot dot-active"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
-                    <li class="dot"></li>
                 </ul>
             </ul>
         </div>
@@ -395,7 +389,8 @@
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
+
+    <script src="./dist/dev-bundle.js"></script>
 </body>
 
 </html>
