--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         </div>
     </div>
 
-    <script src="./dist/dev-bundle.js"></script>
+    <script src="./dist/main.js"></script>
 </body>
 
 </html>
